--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,34 @@
-.gallery__header {
-    color: red;
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.gallery {
+    &__header {
+        color: rgb(27, 27, 27);
+    }
+
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        width: 100%;
+    }
+}
+
+.gallery-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid 1px rgb(224, 224, 224);
+    width: 300px;
+    height: 200px;
+
+    &__image {
+        width: 100%;
+        height: calc(100% - 30px);
+    }
+
+    &__title {
+        padding-top: 5px;
+    }
 }
