--- a/src/index.scss
+++ b/src/index.scss
@@ -23,9 +23,22 @@
     width: 300px;
     height: 200px;
 
-    &__image {
+    &__resource {
         width: 100%;
         height: calc(100% - 30px);
+        display: flex;
+        align-items: center;
+        background-color: rgb(241, 243, 244);
+
+    }
+
+    &__image {
+        width: 100%;
+        height: 100%;
+    }
+
+    &__audio {
+        margin: 20px;
     }
 
     &__title {
